<resources>
    <string name="app_name">Drogopolex</string>
    <string name="login_button">Zaloguj się</string>
    <string name="register_button">Zarejestruj się</string>
    <string name="go_back_button">Wróć</string>
    <string name="name">Nazwa Użytkownika</string>
    <string name="password">Hasło</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="email">Email</string>
    <string name="add_event_button">Nowe zdarzenie</string>
    <string name="events_button">Zdarzenia</string>
    <string name="subscriptions_button">Subskrypcje</string>
    <string name="logout_button">Wyloguj</string>
    <string name="add_event">Dodaj zdarzenie</string>
    <string name="localization">Lokalizacja</string>
    <string name="event_type">Typ zdarzenia</string>
    <string name="subscribe">Subskrybuj</string>
    <string name="dodajSubskrypcje">Dodaj</string>
    <string name="profil_button">Profil</string>
    <string name="szukaj">Szukaj</string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="change_userName">Zmień nazwę użytkownika</string>
    <string name="change_email">Zmień adres email</string>
    <string name="change_password">Zmień hasło</string>
    <string name="subscriptions_list">Lista</string>
    <string name="upvote">+</string>
    <string name="downvote">-</string>
    <string name="add_event_gps">Dodaj zdarzenie (GPS)</string>
    <string name="delete">Usuń</string>
    <string name="map">Mapa</string>
    <string name="dodaj">Dodaj</string>
    <string name="source_place">Punkt początkowy</string>
    <string name="destination_place">Punkt docelowy</string>
    <string name="name_of_route">Nazwa trasy</string>
    <string name="cancel">Anuluj</string>
    <string name="accept">Zatwierdź</string>
    <string name="choose">Wybierz</string>
    <string name="add_rule">Dodaj regułę</string>
    <string name="rekomendacja_trasy">Rekomendacja trasy</string>
</resources>